--- a/style.css
+++ b/style.css
@@ -1,14 +1,35 @@
+
+HTML {background-image: url(./resource/image/rw.gif);
+
+    background-size: 100%;
+    text-align: center;
+    
+}
 h1 {
+    
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-image: url(./resource/image/rw2.gif);
+    
     color: #111;
     font-family: 'Helvetica Neue', sans-serif;
+    
+    border-image: url(./resource/image/brw.gif) 30 round;
+    border-style: solid;
+    border-width: 50px;
     font-size: 275px;
     font-weight: bold;
     letter-spacing: -1px;
     line-height: 1;
     text-align: center;
+    writing-mode: vertical-rl;
+  text-orientation: upright;
 }
 
 p {
+    border-image: url(./resource/image/brw.gif) 30 round;
+    border-style: ridge;
+    border-width: 50px;
     color: #685206;
     font-family: 'Helvetica Neue', sans-serif;
     font-size: 14px;
@@ -31,7 +52,8 @@ ul, ol {
 
 li {
     font: 200 20px/1.5 Helvetica, Verdana, sans-serif;
-    border-bottom: 1px solid #ccc;
+    border-bottom: 12px solid #ccc;
+    border-style: ridge;
 }
    
 li:last-child {
@@ -39,14 +61,59 @@ li:last-child {
 }
 
 form {
+   
+  writing-mode: vertical-rl;
+  text-orientation: upright;
     height:110px;
     width:190px;
     margin:auto;
-    border:1px #CCC solid;
-    padding:10px;
+    border:5px #CCC solid;
+    padding:100px;
 }
     
 input, textarea {
-    padding:5px;
+    
+    background: url(./resource/image/BARFP.gif);
+    padding:100px;
     margin:5px
+}
+div {
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-image: url(./resource/image/rw2.gif);
+    font-size: 50px;
+
+}
+h3,p {
+    font-size: 60px;
+}
+.big {
+    text-align: right;
+    font-size: 30px;
+}
+textarea {
+    color: white;
+}
+.box {
+    
+    width: 600px;
+    height: 100px;
+}
+.box2 {
+    width: 300px;
+    height: 400px;
+}
+.rf {
+
+    font-family: 'Bangers', cursive;
+}
+span {
+    font-size: 76px;
+   
+    
+}
+.ug {
+    width: 300px;
+    height: 300px;
+    background-image: url(./resource/image/ugly.gif);
 }
